# io-aware-attention-trainium

./: .gitignore  CONTRIBUTING.md  EVIDENCE_INDEX.md  Makefile  README.md  chiplet_proxy_poc.py  pyproject.toml  setup.csh  test.py
conda/: environment.cpu.yml  environment.trainium.yml
design_top/: Makefile  setup.sh
docs/: AWS_CHIP_ADVICE_MEMO.md  AwsInstanceSetup.md  DUAL_DIE_COMPUTE_DIAGRAMS.md  EXPERIMENT_GUIDE.md  EXPERIMENT_VALIDATION_DIAGRAM.md  MOE_RESULTS_CURATION.md  PROPOSAL_VS_RESULTS_ALIGNMENT.md  REPO_CLEANUP_AND_PAPER_PLAN.md  REPRODUCIBILITY.md  TRAINIUM_SELF_HOSTED.md  TRN2_EXECUTED_COMMANDS.md  TRN2_EXPERIMENT_RESULTS.md  UsingVSCode.md
env/: trainium_host.env.example
paper/: Makefile  README.md  claims.md  main.tex  mlsys2026.sty  paper_plan.md  refs.bib  results_section_draft.md
requirements/: base.trainium.txt  base.txt  trainium.txt
scripts/: README.md  analyze_sharded_serving_dense.py  bootstrap_trainium_host.sh  generate_paper_assets.py  plot_best_graphs.py  plot_capacity_frontier.py  plot_direct_trace_dense_points.py  plot_inference_track.py  plot_kernel_study.py  plot_moe_service_study.py  plot_phase_study.py  profile_trainium.py  reproduce.sh  run_bench.py  run_direct_policy_trace.py  run_kernel_study.py  run_moe_service_study.py  run_phase_study.py  simulate_mixed_traffic.py  summarize_moe_service.py  sync_results_s3.py  trn2_repro_inference_track.sh  validate_trainium_env.py  what_if_dual_die.py
tests/: test_correctness.py  test_kernel_registry.py  test_kernel_study_config.py  test_kernel_study_correctness.py  test_phase_study.py  (+6 more)
(+187 files in other folders)
